# gorunpy

./: .gitignore  LICENSE  Makefile  README.md  go.mod
cmd/gorunpy/: main.go
cmd/gorunpy-gen/: main.go
example/: .gitignore  Makefile  README.md  go.mod  main.go
example/go/: main.go  main_simple.go
example/go/mathlib/: .gitkeep
example/mylib/: __main__.py  functions.py
example/py/: __main__.py  functions.py
example/python/: requirements.txt
example/python/mathlib/: __init__.py  __main__.py  functions.py
examples/docling/: README.md  main.go
examples/docling/pylib/: __init__.py  convert.py
examples/image/: README.md  main.go
examples/image/pylib/: __init__.py  __main__.py  imaging.py
examples/pandas/: README.md  data.csv  main.go
examples/pandas/pylib/: __init__.py  __main__.py  analysis.py
examples/sentiment/: README.md  main.go
examples/sentiment/pylib/: __init__.py  sentiment.py
gorunpy/: client.go  client_test.go  doc.go  errors.go  gorunpy.go  types.go
python/: README.md  pyproject.toml  pytest.ini  requirements.txt
python/gorunpy/: __init__.py  cli.py
python/tests/: __init__.py  test_gorunpy.py
