[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gorunpy"
version = "0.6.0"
description = "Python SDK for Go-callable executables"
requires-python = ">=3.9"

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0"]

[project.scripts]
gorunpy = "gorunpy.cli:main"

[tool.setuptools.packages.find]
include = ["gorunpy*"]
